--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
 body{
         background-image: url(/images/background.jpg);
-        height: 580px;
-        width: 200px; /* You must set a specified height */
         background-position: center; /* Center the image */
         background-repeat: no-repeat; /* Do not repeat the image */
         background-size: cover; 
+    }
+
+    h1{
+        text-align: center;
+    }
+    
+    a{
+        text-align: center;
     }
